overflow x fix

--- a/scss/home.scss
+++ b/scss/home.scss
@@ -10,6 +10,7 @@
 body {
     color: $text-color;
     background-color: $background-color;
+    overflow-x: hidden;
 }
 
 #home-container {
